<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="bill_amount">Bill Amount:</string>
    <string name="tip_amount">Tip %:</string>
    <string name="bill_total">Bill Total:</string>
    <string name="tip_total">Tip Total:</string>
    <string name="total">Total:</string>
    <string name="round">Round to nearest dollar</string>
    <string name="defult_tip">12.00</string>
    <string name="defult_bill">100.00</string>

</resources>